--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: black;
+    background-color: black;
     color: white;
     font-family: studio-normale-webfont;
     height: 100%;
@@ -10,6 +10,7 @@
 
 .App {
     height: 100%;
+    display: inline-block;
 }
 
 a {
@@ -25,16 +26,21 @@ a:hover {
 
 header, footer {
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     height: 33px;
-    align-items: center;
+    /*align-items: center;*/
 }
 
 header {
+    align-items: flex-start;
+    padding: 10px;
     border-bottom: 1px solid #7777;
 }
 
 footer {
+    align-items: flex-end;
+    padding-bottom: 0;
+    position: inherit;
     border-top: 1px solid #7777;
 }
 
@@ -64,4 +70,35 @@ footer {
 .main > img {
     width:55em;
     height:40em;
+}
+
+.item {
+    width: 470px;
+    height: 470px;
+    background-color: red;
+    margin: 0;
+    padding: 0;
+}
+
+.item:hover {
+    filter: opacity(30%) drop-shadow(0 0 0 red);
+    /*!*filter: saturate(250%);*!*/
+}
+
+.shop{
+    background-color: black;
+    border-image-slice: 30%;
+}
+
+img{
+    width: 501px;
+    height: 500px;
+}
+
+.container {
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-rows: repeat(2, 500px);
+    grid-template-columns: repeat(3, 501px);
 }
